syntax = "proto3"; 
package pb; 

message Contract {
  enum OptionType {
      PUT = 0;
      CALL = 1;
  }

  double strike = 1;
  string expiry = 2;
  OptionType putcall = 3;
}

message PriceRequest { 
   message MarketData {
    double spot = 1;
    double volatility = 2;
    double riskfreerate = 3;
  }

  string pricingdate = 1;
  repeated Contract contracts = 2;
  repeated MarketData marketdata = 3;  
} 

message PriceResponse { 
  string timestamp = 1;
  repeated double price = 2; 
  repeated string error = 3; 
} 

message GreekRequest { 
  PriceRequest request = 1;
  repeated string greek = 2;
}

message GreekResponse { 
  message Greek { 
    repeated string labels = 1; 
    repeated double values = 2; 
    repeated string errors = 3; 
  }
  repeated Greek greeks = 1;
  repeated string errors = 2;
}

message ImpliedVolRequest { 
  message Quote {
    double strike = 8;
    double bid = 9;
    double ask = 10;
    int32 volume = 11;
    int32 openinterest = 12;
  }
  message QuoteTermStructure{
    double expiry = 1;
    repeated Quote puts = 2;
    repeated Quote calls = 3;    
  }

  message MarketData {
    double spot = 1;
    double riskfreerate = 2;
  }

  string pricingdate = 1;
  MarketData marketdata = 2;
  repeated QuoteTermStructure quotes = 3;
} 

message ImpliedVolResponse { 
  message ImpliedVolTermStructure {
      bool iserror = 2; 
      double expiry = 3;
      repeated string errors = 4;
      repeated double strikes = 5;
      repeated double vols = 6;
  }

  repeated ImpliedVolTermStructure volsurface = 1;
} 